# halo2wrong

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: lints.yml  rust.yml
ecc/: Cargo.toml  README.md
ecc/circuit/: Cargo.toml
ecc/circuit/src/: ecc.rs  lib.rs
ecc/circuit/src/ecc/: base_field_ecc.rs  general_ecc.rs
ecc/circuit/src/ecc/base_field_ecc/: add.rs  mul.rs
ecc/circuit/src/ecc/general_ecc/: add.rs  mul.rs
ecc/secp256k1/: README.md
ecc/secp256k1/src/: arithmetic.rs  curves.rs
ecc/secp256k1/src/fields/: fp.rs  fq.rs
ecc/src/: base_field_ecc.rs  ecc.rs  general_ecc.rs  lib.rs
ecc/src/base_field_ecc/: add.rs  mul.rs
ecc/src/ecc/: base_field_ecc.rs  general_ecc.rs
ecc/src/ecc/base_field_ecc/: add.rs  mul.rs
ecc/src/ecc/general_ecc/: add.rs  mul.rs
ecc/src/general_ecc/: add.rs  mul.rs
ecdsa/: Cargo.toml
ecdsa/circuit/: Cargo.toml
ecdsa/circuit/src/: ecdsa.rs
ecdsa/secp256k1/: Cargo.toml
ecdsa/secp256k1/benches/: fp.rs  point.rs
ecdsa/secp256k1/src/: arithmetic.rs  curves.rs  lib.rs
ecdsa/secp256k1/src/arithmetic/: fields.rs
ecdsa/secp256k1/src/fields/: fp.rs  fq.rs
ecdsa/secp256k1forhalo2/: Cargo.toml
ecdsa/secp256k1forhalo2/benches/: fp.rs  fq.rs  point.rs
ecdsa/secp256k1forhalo2/src/: arithmetic.rs  curves.rs  lib.rs
ecdsa/secp256k1forhalo2/src/fields/: fp.rs  fq.rs
ecdsa/src/: ecdsa.rs  lib.rs
halo2wrong/: Cargo.toml
halo2wrong/src/: lib.rs  utils.rs
integer/: Cargo.toml
integer/src/: chip.rs  instructions.rs  integer.rs  lib.rs  rns.rs
integer/src/chip/: add.rs  assert_in_field.rs  assert_not_zero.rs  assert_zero.rs  assign.rs  div.rs  invert.rs  mul.rs  reduce.rs  square.rs
integer/src/integer/: add.rs  assert_in_field.rs  assert_not_zero.rs  assert_zero.rs  assign.rs  div.rs  invert.rs  mul.rs  reduce.rs  square.rs
maingate/: Cargo.toml  README.md
maingate/src/: instructions.rs  lib.rs  main_gate.rs  range.rs  to_bytes.rs  utils.rs
maingate/src/main_gate/: four.rs
maingate/src/main_gate/five/: main_gate.rs  range.rs
maingate/src/main_gate/four/: main_gate.rs  range.rs
src/: circuit.rs  int.rs  lib.rs  main_gate.rs  range.rs  rns.rs  utils.rs  wrong.rs
src/circuit/: ecc.rs  ecdsa.rs  int.rs  integer.rs  main_gate.rs  range.rs
src/circuit/ecc/: add.rs  base_field_ecc.rs  external_ecc.rs  general_ecc.rs
src/circuit/ecc/base_field_ecc/: add.rs  mul.rs
src/circuit/ecc/general_ecc/: add.rs  double.rs  ladder.rs  mul.rs
src/circuit/integer/: add.rs  assert_in_field.rs  assert_not_zero.rs  assert_zero.rs  assign.rs  div.rs  invert.rs  mul.rs  neg.rs  reduce.rs  square.rs  sub.rs
src/ecc/: base_field_ecc.rs  general_ecc.rs  mod.rs  tests.rs
src/ecc/base_field_ecc/: add.rs  mul.rs  mul_fix.rs  mul_var_bucket.rs  mul_var_sliding.rs
src/ecc/general_ecc/: add.rs  mul_fix.rs  mul_var_bucket.rs  mul_var_sliding.rs
src/integer/: chip.rs  mod.rs  rns.rs  tests.rs
src/integer/operations/: add.rs  assert_not_zero.rs  assign.rs  mod.rs  mul.rs  reduce.rs
src/maingate/: assignments.rs  config.rs  lookup.rs  mod.rs  operations.rs  tests.rs
src/maingate/assignments/: extended_gate.rs  main_gate.rs  mod.rs  simple_gate.rs
src/wrong/: bitness.rs  int.rs  range.rs
transcript/: Cargo.toml
transcript/src/: hasher.rs  lib.rs  transcript.rs
