[workspace]
members = [
  "maingate",
  "integer",
  "halo2wrong",
  "ecc",
  "ecdsa",
  "transcript"
]


# remove once 
# https://github.com/privacy-scaling-explorations/halo2/pull/162
# is merged
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "halo2-ecc-snark-verifier-0220" }

