[workspace]
members = [
  "maingate",
  "integer",
  "halo2wrong",
  "ecc",
  "ecdsa",
  "transcript"
]


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/davidnevadoc/halo2.git",  branch = "test/feat-curve-endo" }

[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/davidnevadoc/halo2curves.git", branch = "test/endo-export" }
