[package]
name = "halo2wrong"
version = "0.2.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2" }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand = "0.8"
rand_core = { version = "0.6", default-features = false }

[features]
default = ["sanity-check"]
sanity-check = []
info = []
