[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc = { path = "../ecc", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

