[package]
name = "integer"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
maingate = { path = "../maingate", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.11"
subtle = { version = "2.3", default-features = false }
cfg-if = "0.1"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
secp256k1 = { path = "../ecc/secp256k1", default-features = false }

[features]
default = ["zcash"]
kzg = ["maingate/kzg"]
zcash = ["maingate/zcash"]
