[package]
name = "transcript"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
ecc = { path = "../ecc", default-features = false }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon.git", tag = "v2023_04_20" }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
paste = "1.0.7"

[features]
default = []
circuit-params = ["ecc/circuit-params"]
