[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { path = "../secp256k1/", default-features = true, optional = true }
ecc = { path = "../../ecc", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.11"
subtle = { version = "2.3", default-features = false }
cfg-if = "0.1"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

[features]
default = ["zcash"]
kzg = ["ecc/kzg"]
zcash = ["ecc/zcash"]
secp = ["secp256k1/zcash"]
